infrastructure/k8s/monitoring-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: prometheus-external
  namespace: istio-system
spec:
  hosts:
  - prometheus-operated.monitoring.svc.cluster.local
  ports:
  - number: 9090
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
